// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a combobox 1`] = `
<div>
  <div
    class="usa-form-group"
  >
    <label
      class="usa-label margin-top-1"
      for="1"
    >
      label
    </label>
    <select
      class="usa-select"
      id="1"
      name="name"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="value1"
      >
        content1
      </option>
      <option
        value="value2"
      >
        content2
      </option>
    </select>
  </div>
</div>
`;

exports[`shows an error message 1`] = `
<div>
  <div
    class="usa-form-group usa-form-group--error"
  >
    <label
      class="usa-label margin-top-1"
      for="1"
    >
      label
    </label>
    <span
      class="usa-error-message"
      id="input-error-message"
      role="alert"
    >
      Something went wrong
    </span>
    <select
      class="usa-select"
      id="1"
      name="name"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="value1"
      >
        content1
      </option>
      <option
        value="value2"
      >
        content2
      </option>
    </select>
  </div>
</div>
`;
